Update update-97_1 merged with current version of change 97
git-svn-id: file:///root/var/svn/aranea/branches/change_97@1706 baba0d3d-6527-0410-ba98-ffd8059025de